# mdf-teaching-optimizer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
adapters/claude/: README.md  function_schema.json
adapters/codex/: README.md  task.md
adapters/openclaw/: README.md  tool.json
agents/: openai.yaml
examples/: claude_call.md  codex_call.md  input_prompt.md  openclaw_call.md  source_material.md
references/: markdownflow-spec.md  pipeline-schema.md
src/mdf_teaching_optimizer/: __init__.py  cli.py  core.py
tests/: test_core.py
